RESOLVED FIXED31466
[Qt] QWebView problems with focus on the first activation.
https://bugs.webkit.org/show_bug.cgi?id=31466
Summary [Qt] QWebView problems with focus on the first activation.
Jocelyn Turcotte
Reported 2009-11-13 04:39:17 PST
This leads to the wrong selection color being used and no caret cursor in text fields. To reproduce in QtLauncher: - Open www.google.com - Right click on any link and do open in new window - Wait until the page is loaded before activating the new window - Click and select text in the new windows On Windows at least, the selection will be of the wrong color until you give the focus to another widget and give it back to the web view.
Attachments
Patch (1.26 KB, patch)
2009-11-13 04:56 PST, Jocelyn Turcotte
no flags
Jocelyn Turcotte
Comment 1 2009-11-13 04:56:13 PST
Created attachment 43150 [details] Patch setFocusedFrame check if isFocused() is true before forwarding the event to the frame. This patch ensure that it is called before.
WebKit Commit Bot
Comment 2 2009-11-13 05:21:41 PST
Comment on attachment 43150 [details] Patch Clearing flags on attachment: 43150 Committed r50937: <http://trac.webkit.org/changeset/50937>
WebKit Commit Bot
Comment 3 2009-11-13 05:21:45 PST
All reviewed patches have been landed. Closing bug.
Jocelyn Turcotte
Comment 4 2010-03-17 06:06:19 PDT
*** Bug 35660 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.