2009-11-13  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Fix initial QWebView focus behavior.

        focusController->setFocused(true) was not always called.
        https://bugs.webkit.org/show_bug.cgi?id=31466

        * Api/qwebpage.cpp:
        (QWebPagePrivate::focusInEvent):

Canonical link: https://commits.webkit.org/42366@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50937 268f45cc-cd09-0410-ab3c-d52691b4dbfc